ctpgo/cctptrade_api_darwin.h

// 请求查询投资者持仓响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestorPosition(void* spi, void* func);
// 请求查询资金账户响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryTradingAccount(void* spi, void* func);
// 请求查询投资者响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestor(void* spi, void* func);
// 请求查询交易编码响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryTradingCode(void* spi, void* func);
// 请求查询合约保证金率响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInstrumentMarginRate(void* spi, void* func);
// 请求查询合约手续费率响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInstrumentCommissionRate(void* spi, void* func);
// 请求查询交易所响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryExchange(void* spi, void* func);
// 请求查询产品响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryProduct(void* spi, void* func);
// 请求查询合约响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInstrument(void* spi, void* func);
// 请求查询行情响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryDepthMarketData(void* spi, void* func);
// 请求查询交易员报盘机响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryTraderOffer(void* spi, void* func);
// 请求查询投资者结算结果响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySettlementInfo(void* spi, void* func);
// 请求查询转帐银行响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryTransferBank(void* spi, void* func);
// 请求查询投资者持仓明细响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestorPositionDetail(void* spi, void* func);
// 请求查询客户通知响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryNotice(void* spi, void* func);
// 请求查询结算信息确认响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySettlementInfoConfirm(void* spi, void* func);
// 请求查询投资者持仓明细响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestorPositionCombineDetail(void* spi, void* func);
// 查询保证金监管系统经纪公司资金账户密钥响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryCFMMCTradingAccountKey(void* spi, void* func);
// 请求查询仓单折抵信息响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryEWarrantOffset(void* spi, void* func);
// 请求查询投资者品种/跨品种保证金响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestorProductGroupMargin(void* spi, void* func);
// 请求查询交易所保证金率响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryExchangeMarginRate(void* spi, void* func);
// 请求查询交易所调整保证金率响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryExchangeMarginRateAdjust(void* spi, void* func);
// 请求查询汇率响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryExchangeRate(void* spi, void* func);
// 请求查询二级代理操作员银期权限响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySecAgentACIDMap(void* spi, void* func);
// 请求查询产品报价汇率
DLL_EXPORT_C_DECL void WPCTP tOnRspQryProductExchRate(void* spi, void* func);
// 请求查询产品组
DLL_EXPORT_C_DECL void WPCTP tOnRspQryProductGroup(void* spi, void* func);
// 请求查询做市商合约手续费率响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryMMInstrumentCommissionRate(void* spi, void* func);
// 请求查询做市商期权合约手续费响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryMMOptionInstrCommRate(void* spi, void* func);
// 请求查询报单手续费响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInstrumentOrderCommRate(void* spi, void* func);