pyctp/macos/ctptrade_api.py

        self.FP_OnRspQryInvestorPosition = CFUNCTYPE(None, POINTER(CThostFtdcInvestorPositionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInvestorPosition)
        self.h.tOnRspQryInvestorPosition(self.pSpi, self.FP_OnRspQryInvestorPosition)
        # 请求查询资金账户响应
        self.h.tOnRspQryTradingAccount.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryTradingAccount.restype = None
        self.FP_OnRspQryTradingAccount = CFUNCTYPE(None, POINTER(CThostFtdcTradingAccountField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryTradingAccount)
        self.h.tOnRspQryTradingAccount(self.pSpi, self.FP_OnRspQryTradingAccount)
        # 请求查询投资者响应
        self.h.tOnRspQryInvestor.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInvestor.restype = None
        self.FP_OnRspQryInvestor = CFUNCTYPE(None, POINTER(CThostFtdcInvestorField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInvestor)
        self.h.tOnRspQryInvestor(self.pSpi, self.FP_OnRspQryInvestor)
        # 请求查询交易编码响应
        self.h.tOnRspQryTradingCode.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryTradingCode.restype = None
        self.FP_OnRspQryTradingCode = CFUNCTYPE(None, POINTER(CThostFtdcTradingCodeField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryTradingCode)
        self.h.tOnRspQryTradingCode(self.pSpi, self.FP_OnRspQryTradingCode)
        # 请求查询合约保证金率响应
        self.h.tOnRspQryInstrumentMarginRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInstrumentMarginRate.restype = None
        self.FP_OnRspQryInstrumentMarginRate = CFUNCTYPE(None, POINTER(CThostFtdcInstrumentMarginRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInstrumentMarginRate)
        self.h.tOnRspQryInstrumentMarginRate(self.pSpi, self.FP_OnRspQryInstrumentMarginRate)
        # 请求查询合约手续费率响应
        self.h.tOnRspQryInstrumentCommissionRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInstrumentCommissionRate.restype = None
        self.FP_OnRspQryInstrumentCommissionRate = CFUNCTYPE(None, POINTER(CThostFtdcInstrumentCommissionRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInstrumentCommissionRate)
        self.h.tOnRspQryInstrumentCommissionRate(self.pSpi, self.FP_OnRspQryInstrumentCommissionRate)
        # 请求查询交易所响应
        self.h.tOnRspQryExchange.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryExchange.restype = None
        self.FP_OnRspQryExchange = CFUNCTYPE(None, POINTER(CThostFtdcExchangeField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryExchange)
        self.h.tOnRspQryExchange(self.pSpi, self.FP_OnRspQryExchange)
        # 请求查询产品响应
        self.h.tOnRspQryProduct.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryProduct.restype = None
        self.FP_OnRspQryProduct = CFUNCTYPE(None, POINTER(CThostFtdcProductField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryProduct)
        self.h.tOnRspQryProduct(self.pSpi, self.FP_OnRspQryProduct)
        # 请求查询合约响应
        self.h.tOnRspQryInstrument.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInstrument.restype = None
        self.FP_OnRspQryInstrument = CFUNCTYPE(None, POINTER(CThostFtdcInstrumentField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInstrument)
        self.h.tOnRspQryInstrument(self.pSpi, self.FP_OnRspQryInstrument)
        # 请求查询行情响应
        self.h.tOnRspQryDepthMarketData.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryDepthMarketData.restype = None
        self.FP_OnRspQryDepthMarketData = CFUNCTYPE(None, POINTER(CThostFtdcDepthMarketDataField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryDepthMarketData)
        self.h.tOnRspQryDepthMarketData(self.pSpi, self.FP_OnRspQryDepthMarketData)
        # 请求查询交易员报盘机响应
        self.h.tOnRspQryTraderOffer.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryTraderOffer.restype = None
        self.FP_OnRspQryTraderOffer = CFUNCTYPE(None, POINTER(CThostFtdcTraderOfferField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryTraderOffer)
        self.h.tOnRspQryTraderOffer(self.pSpi, self.FP_OnRspQryTraderOffer)
        # 请求查询投资者结算结果响应
        self.h.tOnRspQrySettlementInfo.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySettlementInfo.restype = None
        self.FP_OnRspQrySettlementInfo = CFUNCTYPE(None, POINTER(CThostFtdcSettlementInfoField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySettlementInfo)
        self.h.tOnRspQrySettlementInfo(self.pSpi, self.FP_OnRspQrySettlementInfo)
        # 请求查询转帐银行响应
        self.h.tOnRspQryTransferBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryTransferBank.restype = None
        self.FP_OnRspQryTransferBank = CFUNCTYPE(None, POINTER(CThostFtdcTransferBankField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryTransferBank)
        self.h.tOnRspQryTransferBank(self.pSpi, self.FP_OnRspQryTransferBank)
        # 请求查询投资者持仓明细响应
        self.h.tOnRspQryInvestorPositionDetail.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInvestorPositionDetail.restype = None
        self.FP_OnRspQryInvestorPositionDetail = CFUNCTYPE(None, POINTER(CThostFtdcInvestorPositionDetailField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInvestorPositionDetail)
        self.h.tOnRspQryInvestorPositionDetail(self.pSpi, self.FP_OnRspQryInvestorPositionDetail)
        # 请求查询客户通知响应
        self.h.tOnRspQryNotice.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryNotice.restype = None
        self.FP_OnRspQryNotice = CFUNCTYPE(None, POINTER(CThostFtdcNoticeField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryNotice)
        self.h.tOnRspQryNotice(self.pSpi, self.FP_OnRspQryNotice)
        # 请求查询结算信息确认响应
        self.h.tOnRspQrySettlementInfoConfirm.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySettlementInfoConfirm.restype = None
        self.FP_OnRspQrySettlementInfoConfirm = CFUNCTYPE(None, POINTER(CThostFtdcSettlementInfoConfirmField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySettlementInfoConfirm)
        self.h.tOnRspQrySettlementInfoConfirm(self.pSpi, self.FP_OnRspQrySettlementInfoConfirm)
        # 请求查询投资者持仓明细响应
        self.h.tOnRspQryInvestorPositionCombineDetail.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInvestorPositionCombineDetail.restype = None
        self.FP_OnRspQryInvestorPositionCombineDetail = CFUNCTYPE(None, POINTER(CThostFtdcInvestorPositionCombineDetailField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInvestorPositionCombineDetail)
        self.h.tOnRspQryInvestorPositionCombineDetail(self.pSpi, self.FP_OnRspQryInvestorPositionCombineDetail)
        # 查询保证金监管系统经纪公司资金账户密钥响应
        self.h.tOnRspQryCFMMCTradingAccountKey.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryCFMMCTradingAccountKey.restype = None
        self.FP_OnRspQryCFMMCTradingAccountKey = CFUNCTYPE(None, POINTER(CThostFtdcCFMMCTradingAccountKeyField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryCFMMCTradingAccountKey)
        self.h.tOnRspQryCFMMCTradingAccountKey(self.pSpi, self.FP_OnRspQryCFMMCTradingAccountKey)
        # 请求查询仓单折抵信息响应
        self.h.tOnRspQryEWarrantOffset.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryEWarrantOffset.restype = None
        self.FP_OnRspQryEWarrantOffset = CFUNCTYPE(None, POINTER(CThostFtdcEWarrantOffsetField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryEWarrantOffset)
        self.h.tOnRspQryEWarrantOffset(self.pSpi, self.FP_OnRspQryEWarrantOffset)
        # 请求查询投资者品种/跨品种保证金响应
        self.h.tOnRspQryInvestorProductGroupMargin.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInvestorProductGroupMargin.restype = None
        self.FP_OnRspQryInvestorProductGroupMargin = CFUNCTYPE(None, POINTER(CThostFtdcInvestorProductGroupMarginField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInvestorProductGroupMargin)
        self.h.tOnRspQryInvestorProductGroupMargin(self.pSpi, self.FP_OnRspQryInvestorProductGroupMargin)
        # 请求查询交易所保证金率响应
        self.h.tOnRspQryExchangeMarginRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryExchangeMarginRate.restype = None
        self.FP_OnRspQryExchangeMarginRate = CFUNCTYPE(None, POINTER(CThostFtdcExchangeMarginRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryExchangeMarginRate)
        self.h.tOnRspQryExchangeMarginRate(self.pSpi, self.FP_OnRspQryExchangeMarginRate)
        # 请求查询交易所调整保证金率响应
        self.h.tOnRspQryExchangeMarginRateAdjust.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryExchangeMarginRateAdjust.restype = None
        self.FP_OnRspQryExchangeMarginRateAdjust = CFUNCTYPE(None, POINTER(CThostFtdcExchangeMarginRateAdjustField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryExchangeMarginRateAdjust)
        self.h.tOnRspQryExchangeMarginRateAdjust(self.pSpi, self.FP_OnRspQryExchangeMarginRateAdjust)
        # 请求查询汇率响应
        self.h.tOnRspQryExchangeRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryExchangeRate.restype = None
        self.FP_OnRspQryExchangeRate = CFUNCTYPE(None, POINTER(CThostFtdcExchangeRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryExchangeRate)
        self.h.tOnRspQryExchangeRate(self.pSpi, self.FP_OnRspQryExchangeRate)
        # 请求查询二级代理操作员银期权限响应
        self.h.tOnRspQrySecAgentACIDMap.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySecAgentACIDMap.restype = None
        self.FP_OnRspQrySecAgentACIDMap = CFUNCTYPE(None, POINTER(CThostFtdcSecAgentACIDMapField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySecAgentACIDMap)
        self.h.tOnRspQrySecAgentACIDMap(self.pSpi, self.FP_OnRspQrySecAgentACIDMap)
        # 请求查询产品报价汇率
        self.h.tOnRspQryProductExchRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryProductExchRate.restype = None
        self.FP_OnRspQryProductExchRate = CFUNCTYPE(None, POINTER(CThostFtdcProductExchRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryProductExchRate)
        self.h.tOnRspQryProductExchRate(self.pSpi, self.FP_OnRspQryProductExchRate)
        # 请求查询产品组
        self.h.tOnRspQryProductGroup.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryProductGroup.restype = None
        self.FP_OnRspQryProductGroup = CFUNCTYPE(None, POINTER(CThostFtdcProductGroupField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryProductGroup)
        self.h.tOnRspQryProductGroup(self.pSpi, self.FP_OnRspQryProductGroup)
        # 请求查询做市商合约手续费率响应
        self.h.tOnRspQryMMInstrumentCommissionRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryMMInstrumentCommissionRate.restype = None
        self.FP_OnRspQryMMInstrumentCommissionRate = CFUNCTYPE(None, POINTER(CThostFtdcMMInstrumentCommissionRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryMMInstrumentCommissionRate)
        self.h.tOnRspQryMMInstrumentCommissionRate(self.pSpi, self.FP_OnRspQryMMInstrumentCommissionRate)
        # 请求查询做市商期权合约手续费响应
        self.h.tOnRspQryMMOptionInstrCommRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryMMOptionInstrCommRate.restype = None
        self.FP_OnRspQryMMOptionInstrCommRate = CFUNCTYPE(None, POINTER(CThostFtdcMMOptionInstrCommRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryMMOptionInstrCommRate)
        self.h.tOnRspQryMMOptionInstrCommRate(self.pSpi, self.FP_OnRspQryMMOptionInstrCommRate)
        # 请求查询报单手续费响应
        self.h.tOnRspQryInstrumentOrderCommRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInstrumentOrderCommRate.restype = None
